# python-getpaid-elavon

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-quality.yml
getpaid_elavon/: __init__.py  apps.py  client.py  processor.py  types.py
tests/: conftest.py  test_client.py  test_processor.py
utils/: quick_signature.py
