[project]
name = "python-getpaid-elavon"
version = "3.0.0a1"
description = "Elavon payment gateway integration for python-getpaid ecosystem"
authors = [
    { name = "Order Group", email = "adam.przyborowski@ordergroup.pl" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
repository = "https://github.com/ordergroup/python-getpaid-elavon"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
    "Typing :: Typed",
]
dependencies = [
    "python-getpaid-core>=3.0.0a2",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.22.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0",
]

[project.entry-points."getpaid.backends"]
elavon = "getpaid_elavon.processor:ElavonProcessor"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["getpaid_elavon"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ["getpaid_elavon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["getpaid_elavon"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
